--- a/themes/defaultone/layout/components/footer/footer.ejs
+++ b/themes/defaultone/layout/components/footer/footer.ejs
@@ -1,10 +1,10 @@
 <footer class="footer mt-5 h-auto text-base text-third-text-color relative border-t-2 border-t-border-color">
     <div class="info-container text-center" style="padding: 16px 0;">
         <div style="line-height:1.2;">
-            &copy; <%= date(new Date(), 'YYYY' ) %> <a href="/">Someone</a> | All rights reserved.
+            &copy; <%= date(new Date(), 'YYYY' ) %> <a href="/">xingranya</a> | All rights reserved.
         </div>
         <div style="line-height:1.2; margin-top: 8px;">
-            Powered by <a href="/">Someone</a>
+            Powered by <a href="/">xingranya</a>
         </div>
     </div>
 </footer>
